# ai-engine-security

./: .gitignore  HEARTBEAT.md  MEMORY.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  check_routes.py  create_test_user.py  debug_employee_login.py  debug_login.py  debug_notes.py  debug_tasks.py  package-lock.json  package.json  start-openclaw.bat  start_morning.py  stop-openclaw.bat  test_customer_portal.py  test_employee_portal.py  test_login.py  test_portal_login.py  test_register_direct.py
office-manager-api/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  check_db.py  create_admin.py  diagnostic.py  docker-compose.yml  final_check.py  full_test.py  morning_check.py  pyproject.toml  requirements.txt  test_cors.ps1  test_cors2.ps1  test_customer.py  test_flow.ps1  test_login.py  test_router.py
office-manager-api/.github/workflows/: ci.yml  pr-check.yml
office-manager-api/alembic/: README  env.py
office-manager-api/app/: __init__.py  dependencies.py  main.py
office-manager-api/app/core/: __init__.py  audit.py  celery_app.py  circuit_breaker.py  config.py  http_client.py  logging.py  rate_limit.py  security.py  tenant.py
office-manager-api/app/db/: session.py
office-manager-api/app/integrations/: google.py  microsoft.py  telegram.py  twilio.py
office-manager-api/app/models/: __init__.py  audit_log.py  base.py  event.py  note.py  role.py  (+3 more)
office-manager-api/docs/: backup_restore.md  migration_safety.md  voice-integration-plan.md
office-manager-api/migrations/: add_timezone.sql  add_user_timezone.py  ai_automation.sql  appointments_rls.sql  comprehensive_rls.sql  employee_portal_permissions.sql  rls_setup.sql
office-manager-api/security/: CHECKLIST.md  STATUS.md
office-manager-api/tests/: conftest.py  pytest.ini  test_circuit_breaker.py  test_health.py  test_http_client.py  test_tenant_isolation.py
(+129 files in other folders)
